--- a/src/site/notes/Calendrier/Semaines/2024-15.md
+++ b/src/site/notes/Calendrier/Semaines/2024-15.md
@@ -16,7 +16,7 @@
 
 ### 🍿 Cette Semaine, J'ai Vu
 
-| file.name                                        | rating | source                                      |
+| nom                                              | rating | source                                      |
 | ------------------------------------------------ | ------ | ------------------------------------------- |
 | DataOps - Mais qu’est-ce que cest                | \-     | https://www.youtube.com/watch?v=lhU9yH1AW0U |
 | OBSIDIAN PRÉSENTATION ∞ Alternative à Powerpoint | \-     | https://www.youtube.com/watch?v=25mDwXZgwTM |
@@ -27,7 +27,7 @@
 
 ### 📚 Cette Semaine, J'ai Lu
 
-| file.name                                                                         | rating | source                                                                  |
+| nom                                                                               | rating | source                                                                  |
 | --------------------------------------------------------------------------------- | ------ | ----------------------------------------------------------------------- |
 | 60 questions étonnantes sur le paranormal et les réponses qu'y apporte la science | 🟡     | \-                                                                      |
 | Harry Dickson tome 09                                                             | 🟡     | <ul><li>https://c3po.link/QxRnuqaEUm</li></ul>                          |
@@ -39,7 +39,7 @@
 
 ### 🎧 Cette Semaine, J'ai Écouté
 
-| file.name                                                                                        | rating | source                                                              |
+| nom                                                                                              | rating | source                                                              |
 | ------------------------------------------------------------------------------------------------ | ------ | ------------------------------------------------------------------- |
 | Event Horizon - Orbital                                                                          | \-     | https://youtube.com/watch?v=lXWQA_Xedj8&amp;si=K0Mw9KnLc9jBfgaG     |
 | Je déteste les podcasts - PodRennes 11, le retour de la bonnette tueuse - Podcast Addict         | \-     | https://podcastaddict.com/je-deteste-les-podcasts/episode/173694284 |
@@ -56,7 +56,7 @@
 
 ### 💡 Cette Semaine, J'ai Travaillé Sur
 
-| file.name                                       | rating | source |
+| nom                                             | rating | source |
 | ----------------------------------------------- | ------ | ------ |
 | Radio Campus Academy                            | \-     | \-     |
 | 2024 - Semaine 15 - Garder Une Trace Des Choses | \-     | \-     |
@@ -65,7 +65,7 @@
 
 ### 🖥 Cette Semaine, J'ai testé
 
-| file.name                                       | rating | source                                 |
+| nom                                             | rating | source                                 |
 | ----------------------------------------------- | ------ | -------------------------------------- |
 | Suno                                            | \-     | https://app.suno.ai/                   |
 | Ugly Avatar                                     | \-     | https://txstc55.github.io/ugly-avatar/ |
@@ -77,7 +77,7 @@
 
 ### 🎮 Cette Semaine, J'ai Joué
 
-| file.name                                                    | rating | source                                                                                  |
+| nom                                                          | rating | source                                                                                  |
 | ------------------------------------------------------------ | ------ | --------------------------------------------------------------------------------------- |
 | Alien Invasion RPG Idle Space – Applications sur Google Play | \-     | https://play.google.com/store/apps/details?id=com.multicastgames.venomSurvive&amp;hl=fr |
 | Rush Royale                                                  | \-     | https://www.youtube.com/@rushroyaleofficial                                             |
